# Flappy-Birds

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
include/: AudioEngine.h  CSRP_SDL2_engine.h  CSRP_SDL2_texture.h  CSRP_SDL2_widgets.h  CSRP_SDL2_windows.h  controller.h  decls.h  game_engine.h  model.h  view.h
include/Components/: Bird.h  Building.h  ComponentFactory.h  Drawable.h  GameEndBox.h  Moon.h  Obstacle.h  PauseElement.h  Scoreboard.h  Stars.h
include/Flappy-Bird/: Flappy-Bird.h
include/GameEngine/: Bird.h  Building.h  ComponentFactory.h  GameEndBox.h  Moon.h  Obstacle.h  PauseElement.h  ScoreBoard.h  Stars.h
include/GamePage/: controller.h  decls.h  model.h  view.h
include/GuiRoot/: GuiRoot.h
include/OptionsPage/: controller.h  decls.h  model.h  view.h
include/ResultPage/: view.h
include/StartPage/: controller.h  decls.h  model.h  view.h
src/: AudioEngine.cpp  CSRP_SDL2_engine.cpp  CSRP_SDL2_texture.cpp  CSRP_SDL2_widgets.cpp  CSRP_SDL2_windows.cpp  controller.h  game_engine.cpp  main.cpp  model.cpp  view.h
src/Components/: Bird.cpp  Building.cpp  CMakeLists.txt  ComponentFactory.cpp  GameEndBox.cpp  Moon.cpp  Obstacle.cpp  PauseElement.cpp  ScoreBoard.cpp  Stars.cpp
src/Flappy-Bird/: CMakeLists.txt  Flappy-Bird.cpp
src/GameEngine/: Bird.cpp  Bird.h  Building.cpp  Building.h  CMakeLists.txt  ComponentFactory.cpp  GameEndBox.cpp  GameEndBox.h  Moon.cpp  Moon.h  Obstacle.cpp  Obstacle.h  PauseElement.cpp  PauseElement.h  ScoreBoard.cpp  ScoreBoard.h  Stars.cpp  Stars.h
src/GamePage/: CMakeLists.txt  controller.cpp  controller.h  model.cpp  model.h  view.cpp  view.h
src/GuiRoot/: CMakeLists.txt  GuiRoot.cpp  GuiRoot.h
src/OptionsPage/: CMakeLists.txt  controller.cpp  controller.h  model.cpp  model.h  view.cpp  view.h
src/ResultPage/: CMakeLists.txt  view.cpp
src/StartPage/: CMakeLists.txt  controller.cpp  controller.h  model.cpp  model.h  view.cpp  view.h
